<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >



       <ImageView
           android:layout_width="200dp"
           android:layout_marginTop="40dp"
           android:layout_height="200dp"
           android:id="@+id/e"
           android:src="@drawable/logo">

       </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        ></EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/pass"
        android:drawablePadding="10dp">

    </EditText>

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:paddingRight="0dp"
        android:text="@string/forget" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progress"
            android:visibility="gone"
            >
        </ProgressBar>


        <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:layout_gravity="center"
        android:text="@string/button_login"
        android:textColor="@android:color/white">

    </Button>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="30dp"
        android:text="OR"
        android:layout_gravity="center_horizontal"

        />


    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/register" />



    </LinearLayout>

</LinearLayout>
</ScrollView>