<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="200dp"
        android:layout_marginTop="40dp"
        android:layout_height="200dp"
        android:id="@+id/e"
        android:src="@drawable/logo">

    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Enter Name"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:hint="@string/user_email"

        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"></EditText>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:hint="@string/user_password"
        android:inputType="textPassword"></EditText>

    <EditText
        android:id="@+id/cnf_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/user_cnf_password"
        android:inputType="textPassword"></EditText>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/user_phone"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:inputType="phone"></EditText>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="40dp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progress"
            android:visibility="gone"
            >

        </ProgressBar>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_btn"
        android:text="Register"
        android:textColor="@android:color/white"
        android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>
</ScrollView>